--- a/src/components/MemeDisplay.css
+++ b/src/components/MemeDisplay.css
@@ -13,6 +13,11 @@ img {
     width: 100%;
     top: 10px;
     left: 10px;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
    }
 
    .centeredBottom {
@@ -21,5 +26,10 @@ img {
     width: 100%;
     bottom: 10px;
     left: 10px;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
    }
 }
